XMLtoCSV/objects/unpackaged/objects/Call_Cycle_Entry_vod__c.object
<CustomObject>
    <description>Call Cycle Entries store information about a rep&apos;s weekly route.  They only store account name, the default address for each account is used when the call cycle is applied to a day.  Call cycles (and their titles) are only editable on VMobile.  However, reporting or viewing of calls cycles online, is supported.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the target Account.  The Accounts default address will be used when applying a call cycle to a day or week.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call_Cycle_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Color_vod__c</fullName>
        <description>Custom color associated with Call-Cycle entry.  Colors from a call cycle are copied to a week when the call cycle is applied.  Configuration of the choice of colors is not supported.</description>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_Title_vod__c</fullName>
        <description>Label for a day of a call cycle.  This label is editable at the top of each day in Call Cycle view in VMobile.  It appears in search results for that call cycle and can be searched on to find call cycles by day name.  Warning: The day title and day/week are read-only online to prevent corrupt day titles.  The day titles for all call cycle entries for a given day must be the same.  On VMobile this is handled automatically.</description>
        <label>Day Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_Week_vod__c</fullName>
        <description>A call cycle entry is located at a (Week#, Day of Week, and Time).  When applied to a week, a call cycle is placed on the week according to its (Day of Week, Time).</description>
        <label>Day of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Duration of the call cycle entry in minutes.</description>
        <label>Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Priority_1_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.</description>
        <label>Product Priority 1</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Cycle Entries</relationshipLabel>
        <relationshipName>Call_Cycle_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_2_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Second product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.</description>
        <label>Product Priority 2</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Cycle Entries (Product Priority 2)</relationshipLabel>
        <relationshipName>Call_Cycle_Entries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Priority_3_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Third product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.</description>
        <label>Product Priority 3</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Call Cycle Entries (Product Priority 3)</relationshipLabel>
        <relationshipName>Call_Cycle_Entries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>A call cycle entry is located at a (Week#, Day of Week, and Time). When applied to a week, a call cycle is placed on the week according to its (Day of Week, Time).</description>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>7:00 AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_vod__c</fullName>
        <defaultValue>1</defaultValue>
        <description>A call cycle entry is located at a (Week#, Day of Week, and Time). When applied to a week, a call cycle is placed on the week according to its (Day of Week, Time).  A user can have as many call cycle weeks as they choose.  Only non-empty weeks are visible in search results.</description>
        <label>Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Call Cycle Entry</label>
    <nameField>
        <displayFormat>CCEN{00000000}</displayFormat>
        <label>Call Cycle Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Cycle Entries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>